# Luauncher

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pubspec.yaml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
docs/: CONTRIBUTING.md
examples/: Calculator.lua  Check.lua  Multiapp.lua  Multisite.lua  Notepad Chain.lua  Notepad.lua  OS messagebox.lua  System based Commands.lua  github.com.lua
flutter/: README.md  pubspec.yaml
flutter/lib/: launcher_window.dart  main.dart  output_logger.dart  tauri_invoke.dart
flutter/lib/screens/: library_screen.dart  output_screen.dart  settings_screen.dart
flutter/web/: index.html  manifest.json
lib/screens/: settings_screen.dart
src/: index.html  main.dart.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/csrc/: lua_calls.c
src-tauri/icons/: icon.icns
src-tauri/src/: dart.rs  files.rs  lib.rs  lua_utils.rs  main.rs  output.rs  utils.rs
src-tauri/updater/: Cargo.toml
src-tauri/updater/src/: main.rs
src/assets/: NOTICES
windows/: CMakeLists.txt
windows/runner/: Runner.rc  flutter_window.cpp  flutter_window.h  main.cpp
