[package]
name = "luauncher"
version = "1.2.0"
description = "A Lua Launcher"
authors = ["GlowyGhost"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Luauncher"
path = "src/lib.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
mlua = { version = "0.10", features = ["lua54", "vendored", "async", "send"] }
directories = "5.0"
tokio = { version = "1", features = ["full"] }
rfd = "0.15.4"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
open = "5"
once_cell = "1"
image = "0.24"

[target.'cfg(windows)'.dependencies]
windows-icons = "0.3"
winapi = { version = "0.3.1", features = ["winuser"] }
windows = { version = "0.62.0", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation"] }
ico = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
icns = "0.3"
